--- a/views/show.haml
+++ b/views/show.haml
@@ -7,4 +7,4 @@
   = markdown @page.content
   
 %a{:href => "/pages/#{@page.id}/edit"}>Edit
-%a{:href => '/pages/delete/#{@page.id}/edit'}>Delete
+%a{:href => "/pages/delete/#{@page.id}"}>Delete
