--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,31 +1,25 @@
 !!! 5
 %html
-	%head
-		%meta{:charset => "utf-8"}
-		%title ladybug cms
-		%meta{:name => "description", :content => "ladybug cms demo"}
-		%meta{:name => "author", :content => "Rogelio Zarate i.am@rogeliozarate.com"}
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		:plain
-			<!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-			<!--[if lt IE 9]>
-				<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-			<![endif]-->
+  %head
+    %meta{:charset => "utf-8"}
+    %title ladybug cms
+    %meta{:name => "description", :content => "ladybug cms demo"}
+    %meta{:name => "author", :content => "Rogelio Zarate i.am@rogeliozarate.com"}
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    %meta{:name => "viewport", :content => "width=device-width; initial-scale=1.0; maximum-scale=1.0;"}
+    :plain
+      <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+      <!--[if lt IE 9]>
+        <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <![endif]-->
+    
+    / Styles
+    / Styles twitter bootstrap
+    %link{ :href => "/bootstrap/css/bootstrap.css", :type => "text/css", :rel => "stylesheet" }
+    / Styles global
+    %link{:rel => 'stylesheet', :href => '/stylesheets/global.css', :type => 'text/css'}
 
-		/ Le styles
-		%link{ :href => "/bootstrap/css/bootstrap.css", :type => "text/css", :rel => "stylesheet" }
-	
-		/ add body padding styles
-		%link{ :href => "/css/styles.css", :type => "text/css", :rel => "stylesheet" }
-
-	
-		%link{ :href => "/bootstrap/css/bootstrap-responsive.css", :type => "text/css", :rel => "stylesheet" }	
-
-		/ Le fav and touch icons 
-		%link{ rel: "apple-touch-icon", href: "/bootstrap/images/apple-touch-icon.png"}
-		%link{ rel: "apple-touch-icon", sizes: "72x72", href: "/bootstrap/images/apple-touch-icon-72x72.png"}
-		%link{ rel: "apple-touch-icon", sizes: "114x114", href: "/bootstrap/images/apple-touch-icon-114x114.png"}
-
-	
-	%body
-		%div= yield
+  %body
+    .logo
+      ladybug 
+    %div= yield
